# poe-data

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  Makefile  README.md  TODO.md  gen.jsonnet
docs/: DAT_FORMAT.md
lib/: config.libsonnet  emptyfiles.libsonnet  tables.libsonnet  test.jsonnet  types.libsonnet  util.libsonnet  validfiles.libsonnet
src/: dat_parser.rs  heuristics.rs  lib.rs  statdescriptions.rs  statdescriptions_parser.rs  tables.rs  types.rs  validators.rs  versions.rs
src/scanners/: arrays.rs  bool.rs  datetime.rs  hashes.rs  interval.rs  mod.rs  references.rs  strings.rs
src/tables/: abyss_bench_ticket_types.rs  abyss_boss_life_scaling_per_level.rs  abyss_monster_mod_replacement.rs  achievement_item_rewards.rs  achievement_items.rs  achievement_sets_display.rs  achievements.rs  action_types.rs  active_settings.rs  active_skill_requirements.rs  active_skill_type.rs  active_skill_weapon_requirement.rs  active_skills.rs  acts.rs  add_buff_to_target_varieties.rs  additional_life_scaling.rs  additional_monster_packs_from_stats.rs  advanced_skills_tutorial.rs  aegis_variations.rs  affliction_balance_per_level.rs  affliction_endgame_wave_mods.rs  affliction_fixed_mods.rs  affliction_random_mod_categories.rs  affliction_reward_map_mods.rs  affliction_reward_type_visuals.rs  affliction_split_demons.rs  alternate_passive_additions.rs  alternate_passive_skills.rs  alternate_quality_types.rs  alternate_skill_targeting_behaviours.rs  alternate_tree_art.rs  alternate_tree_extra_passive_overrides_from_jewel_stats.rs  (+683 more)
tests/: type_detection.rs
