[package]
name = "poe-data"
version = "0.1.0"
edition = "2021"

[dependencies]
annotate-snippets = "0.11.5"
bytes = "1.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
strum = { version = "0.26.3", features = ["derive"] }
winnow = { version = "0.6.24" }
# poe_tools = { git = "https://github.com/vitaminmoo/poe_data_tools/", branch = "caching-spike" }
poe_tools = { git = "https://github.com/adamthedash/poe_data_tools/", branch = "master" }
dirs = "6.0.0"
anyhow = "1.0.95"
